objects/lnt__Send_Gift_Template__c.object
<CustomObject>
    <fields>
        <fullName>lnt__Budgeted_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be the user who has access to Loop&amp;Tie, and from this user the budget is calculated to send gift.</description>
        <inlineHelpText>This will be the user who has access to Loop&amp;Tie, and from this user the budget is calculated to send gift.</inlineHelpText>
        <label>Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Send_Gift_Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Collection_Id__c</fullName>
        <description>This is used for a temporary bug fix for collection id value, this will be hidden from the layout.</description>
        <label>Collection Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Collection_Price__c</fullName>
        <description>This is used for a temporary bug fix for collection price value, this will be hidden from the layout.</description>
        <label>Collection Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Collection__c</fullName>
        <label>Collection</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Default_Expiration_in_Months__c</fullName>
        <label>Default Expiration in Months</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lnt__Design__c</fullName>
        <label>Design</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Logo__c</fullName>
        <label>Logo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Message_Gift_Template__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lnt__Message__c</fullName>
        <label>Message_deprecated</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>lnt__Send_From__c</fullName>
        <label>Send From_deprecated</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Send_after_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To schedule send gift after x days</description>
        <inlineHelpText>To schedule send gift after x days</inlineHelpText>
        <label>Send after (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Sender_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sender Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Send_Gift_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Signature__c</fullName>
        <label>Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Team__c</fullName>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__design_Url__c</fullName>
        <label>design Url</label>
        <type>TextArea</type>
    </fields>
    <label>Send Gift Template</label>
    <listViews>
        <fullName>lnt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LTT-{0000}</displayFormat>
        <label>Send Gift Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Send Gift Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>